# codex-fast-proxy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  plan.md  pyproject.toml
.codex/: INSTALL.md  SET_UPSTREAM.md  UNINSTALL.md  UPDATE.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yml
docs/: README.zh-CN.md  advanced-usage.md
skills/codex-fast-proxy/: SKILL.md
src/codex_fast_proxy/: __init__.py  __main__.py  actions.py  auth.py  auth_prepare.py  auth_store.py  benchmark.py  config.py  control_ui.py  control_ui_render.py  core.py  dashboard.py  defaults.py  hooks.py  lifecycle.py  manager.py  models.py  ports.py  proxy.py  runtime_process.py  runtime_status.py  skill_link.py  state.py  status_rules.py  storage.py  telemetry.py  updater.py  verification.py
tests/: test_benchmark.py  test_control_ui.py  test_manager.py  test_proxy.py  test_skill_metadata.py
tests/fixtures/: fast_proxy_dashboard.jsonl
