[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-fast-proxy"
version = "0.1.0"
description = "Local Codex App proxy that injects service_tier=priority for Responses API calls."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.scripts]
codex-fast-proxy = "codex_fast_proxy.manager:main"

[tool.setuptools.packages.find]
where = ["src"]
