[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-fast-proxy"
version = "0.1.0"
description = "Codex App auth-split proxy for signing in with ChatGPT while using third-party OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "zstandard>=0.25.0",
]
license = { text = "MIT" }
keywords = [
    "agent-skills",
    "codex",
    "openai-codex",
    "codex-skill",
    "skills",
    "ai-agents",
    "responses-api",
    "fast-mode",
    "service-tier",
    "openai-compatible-api",
    "chatgpt-login",
    "auth-split",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/gaoguobin/codex-fast-proxy#readme"
Repository = "https://github.com/gaoguobin/codex-fast-proxy"
Issues = "https://github.com/gaoguobin/codex-fast-proxy/issues"
Documentation = "https://github.com/gaoguobin/codex-fast-proxy#readme"

[project.scripts]
codex-fast-proxy = "codex_fast_proxy.manager:main"

[tool.setuptools.packages.find]
where = ["src"]
